force-app/main/default/objects/Xero_Invoice_Line__c/Xero_Invoice_Line__c.object-meta.xml
<CustomObject>
    <description>Line item mirrored from Xero for a Xero Invoice.</description>
    <label>Xero Invoice Line</label>
    <nameField>
        <displayFormat>LINE-{000000}</displayFormat>
        <label>Xero Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>