force-app/main/default/objects/Xero_Invoice_Line__c/fields/Xero_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice__c</fullName>
    <description>Parent Xero Invoice.</description>
    <label>Xero Invoice</label>
    <referenceTo>Xero_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>