force-app/main/default/objects/Xero_Invoice_Line__c/fields/Xero_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Line_Item_ID__c</fullName>
    <description>LineItemID from Xero.</description>
    <label>Xero Line Item ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>